--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "express": "^4.17.1",
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "react-typed": "^1.2.0",
+    "react-wow": "^1.0.0",
+    "web-vitals": "^1.1.2",
+    "wowjs": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
